Can do select query from database

--- a/Mario Pizza/Module 1/MarioImport/build.gradle
+++ b/Mario Pizza/Module 1/MarioImport/build.gradle
@@ -7,7 +7,7 @@ group 'nl.nl.minka'
 version '1.0-SNAPSHOT'
 
 application {
-    mainClassName = 'nl.minka.SqlDatabaseConnection'
+    mainClassName = 'nl.minka.Main'
 }
 
 repositories {
